@@ -45,6 +45,7 @@ Config::MySQL = 0.02
 version = 0.9912
 SQL::Translator = 0.11021
 Text::Brew = 0.02
+Module::Find = 0.13
 
 [Prereqs / TestRequires]
 Test::Most = 0.34
